[gd_scene load_steps=4 format=3 uid="uid://brgbkifqp2n41"]

[ext_resource type="Theme" uid="uid://cgh2mjuggvfnv" path="res://ui/themes/my_theme.tres" id="1_gchx3"]
[ext_resource type="Script" uid="uid://cbuwr6jvxunvs" path="res://scripts/ui/pause_screen.gd" id="1_qeunj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gchx3"]

[node name="Pause Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qeunj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gchx3")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -84.5
offset_right = 120.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="text - game paused" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_gchx3")
theme_override_font_sizes/font_size = 32
text = "Game Paused"
horizontal_alignment = 1

[node name="pause resume" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_gchx3")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Button" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_gchx3")
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/pause resume" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Button" to="." method="_on_quit_button_pressed"]
